[package]
name = "ff78-launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
log = "0.4.22"
simple-logging = "2.0.2"
toml = "0.8.19"
windows = { version = "0.58.0", features = ["Win32_Graphics_Gdi", "Win32_Security", "Win32_System_Com", "Win32_System_Diagnostics_Debug", "Win32_System_Kernel", "Win32_System_Memory", "Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
